[package]
name = "ckb-unisat-lock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
overflow-checks = true
strip = true
opt-level = 's'
lto = false
codegen-units = 1

[dependencies]
ckb-auth-rs = { git="https://github.com/nervosnetwork/ckb-auth" }
ckb-std = "0.14.3"
hex = { version = "0.4.3", default-features = false, features = ["alloc"]}
